--- a/index.html
+++ b/index.html
@@ -158,16 +158,24 @@
 
         <div id="page3">
             <div class="child" id="child1">
-              <img src="https://cdn.sanity.io/images/w8f1ak3c/production/3b2b544a85c69e257f9878c1d7a400090f615188-5000x5000.png/Hugs-Kisses-Pack-Two-Good-Co.png?w=1024&h=1024&auto=format" alt="">
+              <img src="https://cdn.sanity.io/images/w8f1ak3c/production/3b2b544a85c69e257f9878c1d7a400090f615188-5000x5000.png/Hugs-Kisses-Pack-Two-Good-Co.png?w=1024&h=1024&auto=format" alt="TWO KISSES & tWO HUGS CANDLE & SPRAY PACK">
+              <p>TWO KISSES & tWO HUGS CANDLE & SPRAY PACK</p>           
+                <p id="price">$169</p>
             </div>
             <div class="child" id="child2">
-                <img src="https://cdn.sanity.io/images/w8f1ak3c/production/ff38add7e1688478b9265cc2f1c252db0ff61158-5000x5000.png/68.png?w=1024&h=1024&auto=format" alt="">
+                <img src="https://cdn.sanity.io/images/w8f1ak3c/production/ff38add7e1688478b9265cc2f1c252db0ff61158-5000x5000.png/68.png?w=1024&h=1024&auto=format" alt="STRAWBERRY GUM LEAF, CORIANDER,BASIL+ MINT CANDLE">
+                <p>STRAWBERRY GUM LEAF, CORIANDER,BASIL+ MINT CANDLE</p>
+                <p id="price">$59</p>
             </div>
             <div class="child" id="child3">
-                <img src="https://cdn.sanity.io/images/w8f1ak3c/production/3dab242fa3387f3fc93a1663d944ff8fab1d00a7-2900x2900.png/Donate-20-meals-womens-shelter-two-good-co.png?w=1024&h=1024&auto=format" alt="">
+                <img src="https://cdn.sanity.io/images/w8f1ak3c/production/3dab242fa3387f3fc93a1663d944ff8fab1d00a7-2900x2900.png/Donate-20-meals-womens-shelter-two-good-co.png?w=1024&h=1024&auto=format" alt="DONATE 20 MEALS TO A WOMEN'S SHELTER">
+                <p>DONATE 20 MEALS TO A WOMEN'S SHELTER</p>
+                <p id="price">$200</p>
             </div>
             <div class="child" id="child4">
-                <img src="https://cdn.sanity.io/images/w8f1ak3c/production/7d180ca25ade6277a215b634318056d551de9da8-5000x5000.png/Website%20Products%20(5).png?w=1024&h=1024&auto=format" alt="">
+                <img src="https://cdn.sanity.io/images/w8f1ak3c/production/7d180ca25ade6277a215b634318056d551de9da8-5000x5000.png/Website%20Products%20(5).png?w=1024&h=1024&auto=format" alt="TWO GOOD CO. HOODIE">
+                 <p>TWO GOOD CO. HOODIE</p>
+                <p id="price">$140</p>
             </div>
 
         </div>
